[package]
authors = ["Petr Zemek <petr.zemek@avast.com>"]
description = "Obtaining of statistics about a replica-set oplog if a MongoDB database"
edition = "2018"
keywords = ["database", "mongodb", "oplog", "replication", "statistics"]
license = "MIT"
name = "mongodb-oplog-stats"
readme = "README.md"
repository = "https://github.com/avast/mongodb-oplog-stats"
version = "0.2.0"

[dependencies]
bson = "2.2.0"
chrono = "0.4.19"
clap = "3.1.18"
failure = "0.1.8"
humansize = "1.1.1"
indicatif = "0.16.2"
mongodb = { version = "2.2.1", default-features = false, features = ["sync"] }
prettytable-rs = "0.8.0"
rpassword = "6.0.1"
